# programming3

./: .gitignore  docker-compose.yaml  requirements.txt
example/: .pre-commit-config.yaml  index.html  pyproject.toml  requirements.txt
example/new_proj/: .env  Dockerfile  db.sqlite3  docker-compose.yaml  settings.sqlite3
example/new_proj/blog/: admin.py  models.py
example/new_proj/blog/migrations/: 0001_initial.py
example/new_proj/new_proj/: settings.py  urls.py
example/new_proj/templates/: blog.html  blogs.html  index.html  profile.html
new_proj/: db.sqlite3  manage.py
new_proj/new_proj/: asgi.py
src/: Dockerfile  pyproject.toml
src/new_proj/app/: forms.py  views.py
src/new_proj/blog/: views.py
src/new_proj/blog/migrations/: 0002_blog_created_at_blog_updated_at.py
src/new_proj/new_proj/: environment.py  settings.py  urls.py  wsgi.py
src/new_proj/notes/: admin.py  models.py  views.py
src/new_proj/notes/migrations/: 0001_initial.py  0002_blog_created_at_blog_updated_at.py  0003_notes_content.py
src/new_proj/static/scripts/: navigationToggle.js  note.js
src/new_proj/templates/: authorized.html  blogs.html  home.html  index.html  login.html  navigation.html  notauthorized.html  note.html  notes.html  profile.html  sidebar.html
src/new_proj/templates/registration/: login.html
